# Robocup_Mid_Sim

./: .gitignore
gazebo_visual/nubot_description/: package.xml
gazebo_visual/nubot_description/models/RoboCup15_MSL_Field/: model.sdf
gazebo_visual/nubot_description/models/rival2/: model.sdf
gazebo_visual/nubot_description/models/rival4/: model.sdf
gazebo_visual/nubot_description/models/rival5/: model.sdf
src/gazebo_visual/nubot_description/: 1.py  TODO  setup.cfg  setup.py
src/gazebo_visual/nubot_description/models/RoboCup15_MSL_Field/: model.config
src/gazebo_visual/nubot_description/models/football/: model.sdf
src/gazebo_visual/nubot_description/models/nubot1/: model.sdf
src/gazebo_visual/nubot_description/models/nubot2/: model.sdf
src/gazebo_visual/nubot_description/models/nubot3/: model.sdf
src/gazebo_visual/nubot_description/models/nubot4/: model.sdf
src/gazebo_visual/nubot_description/models/nubot5/: model.sdf
src/gazebo_visual/nubot_description/models/rival1/: model.sdf
src/gazebo_visual/nubot_description/models/rival2/: model.sdf
src/gazebo_visual/nubot_description/models/rival3/: model.sdf
src/gazebo_visual/nubot_description/models/rival4/: model.sdf
src/gazebo_visual/nubot_description/models/rival5/: model.sdf
src/gazebo_visual/nubot_gazebo/: package.xml  setup.py
src/gazebo_visual/nubot_gazebo/config/: bridge.yaml
src/gazebo_visual/nubot_gazebo/launch/: nubot_gazebo.launch.py
src/gazebo_visual/nubot_gazebo/worlds/: robocup15MSL.sdf
(+1 files in other folders)
